--- a/v5-test/pom.xml
+++ b/v5-test/pom.xml
@@ -13,6 +13,11 @@
 			<version>1.7.25</version>
 		</dependency>
 		<dependency>
+			<artifactId>grpc-core</artifactId>
+			<groupId>io.grpc</groupId>
+			<version>1.30.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.api-ads</groupId>
 			<artifactId>google-ads</artifactId>
 			<version>9.0.0</version>
