--- a/v5-test/Procfile
+++ b/v5-test/Procfile
@@ -1,1 +1,1 @@
-web: java $JAVA_OPTS -Djava.util.logging.config.file=./resources/jdk-logger.properties -cp target/classes:target/dependency/* v5test.V5Test
+worker: java $JAVA_OPTS -Djava.util.logging.config.file=./resources/jdk-logger.properties -cp target/classes:target/dependency/* v5test.V5Test
