--- a/v5-test/pom.xml
+++ b/v5-test/pom.xml
@@ -12,11 +12,11 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.7.25</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<artifactId>grpc-core</artifactId> -->
-<!-- 			<groupId>io.grpc</groupId> -->
-<!-- 			<version>1.30.0</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<artifactId>grpc-core</artifactId>
+			<groupId>io.grpc</groupId>
+			<version>1.30.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.api-ads</groupId>
 			<artifactId>google-ads</artifactId>
