--- a/v5-test/pom.xml
+++ b/v5-test/pom.xml
@@ -12,11 +12,11 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.7.25</version>
 		</dependency>
-		<dependency>
-			<artifactId>grpc-core</artifactId>
-			<groupId>io.grpc</groupId>
-			<version>1.30.0</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<artifactId>grpc-core</artifactId> -->
+<!-- 			<groupId>io.grpc</groupId> -->
+<!-- 			<version>1.30.0</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>com.google.api-ads</groupId>
 			<artifactId>google-ads</artifactId>
@@ -51,19 +51,19 @@
 	<!-- </plugins> -->
 	<!-- </build> -->
 
-<!-- 	<build> -->
-<!-- 		<finalName>v5-test</finalName> -->
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-compiler-plugin</artifactId> -->
-<!-- 				<version>2.5.1</version> -->
-<!-- 				<inherited>true</inherited> -->
-<!-- 				<configuration> -->
-<!-- 				<source>1.8</source> -->
-<!-- 				<target>1.8</target> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
-<!-- 	</build> -->
+	<build>
+		<finalName>v5-test</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<inherited>true</inherited>
+				<configuration>
+				<source>1.8</source>
+				<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
